--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,9 +61,12 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/logo_eu_empreendedor.png
+    - assets/logo_ifsuldeminas.png
+    - assets/menininho.png
+    - assets/robotica.jpg
+    - assets/feira_ciencias.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
